--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 ¡Hablemos!
               </div>
               <div class="col-12 col-md-4 descripcion">
-                Este blog se consruye en conjunto, cuéntanos tus ideas o experiencias y creemos un proyecto juntas.
+                Este blog se construye en conjunto, cuéntanos tus ideas o experiencias y creemos un proyecto juntas.
               </div>
               <div class="col-12 col-md-4">
                 <a href="fernanda.paz.ca16@gmail.com">
@@ -207,7 +207,7 @@
             <i class="bi bi-envelope"></i>
           </a>
         </div>
-        <div class="derechos-de-autor">Creado con 💖 por Karina Paz (2023) &#169;</div>
+        <div class="derechos-de-autor">Creado con 💚 por Karina Paz (2023) &#169;</div>
       </footer>
   
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
